core/unpackaged/main/default/objects/LoggerPlugin__mdt/LoggerPlugin__mdt.object-meta.xml
<CustomObject>
    <description>Used to configure additional Apex classes and Flows that should be executed by Nebula Logger. Plugins can be built to be either a trigger-based plugin (automatically executed for all trigger operations on the included objects LogEntryEvent__e, LoggerScenario__c, Log__c, LogEntry__c, LogEntryTag__c, and LoggerTag__c), or either a batchable-based plugin (automatically executed the batch job LogBatchPurger), or both triggerable &amp; batchable</description>
    <label>Logger Plugin</label>
    <pluralLabel>Logger Plugins</pluralLabel>
</CustomObject>