core/unpackaged/main/default/objects/LoggerPlugin__mdt/fields/BatchPurgerApexClass__c.field-meta.xml
<CustomField>
    <fullName>BatchPurgerApexClass__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Batch Purger Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>