core/unpackaged/main/default/objects/LoggerPlugin__mdt/fields/BatchPurgerExecutionOrder__c.field-meta.xml
<CustomField>
    <fullName>BatchPurgerExecutionOrder__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>The specific order to execute plugins in the org. Plugins are executed in order by sorting by execution order, then plugin name (ORDER BY ExecutionOrder__c NULLS LAST, DeveloperName).</description>
    <inlineHelpText>The specific order to execute plugins in the org. Plugins are executed in order by sorting by execution order, then plugin name (ORDER BY ExecutionOrder__c NULLS LAST, DeveloperName).</inlineHelpText>
    <label>Batch Purger Execution Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>