core/unpackaged/main/default/objects/LoggerPlugin__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Used purely for documentation purposes to store any important details about this parameter</description>
    <inlineHelpText>Used purely for documentation purposes to store any important details about this parameter</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>