core/unpackaged/main/default/objects/LoggerPlugin__mdt/fields/ExecutionOrder__c.field-meta.xml
<CustomField>
    <fullName>ExecutionOrder__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Deprecated: This field is no longer used.</description>
    <inlineHelpText>Deprecated: This field is no longer used.</inlineHelpText>
    <label>Execution Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>