core/unpackaged/main/default/objects/LoggerPlugin__mdt/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <complianceGroup>None</complianceGroup>
    <defaultValue>true</defaultValue>
    <description>Controls if the plugin is enabled/disabled. Only enabled plugins will be executed by the logging system.</description>
    <inlineHelpText>Controls if the plugin is enabled/disabled. Only enabled plugins will be executed by the logging system.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>