core/unpackaged/main/default/objects/LoggerPlugin__mdt/fields/PluginType__c.field-meta.xml
<CustomField>
    <fullName>PluginType__c</fullName>
    <complianceGroup>None</complianceGroup>
    <description>Deprecated: This field is no longer used.</description>
    <inlineHelpText>Deprecated: This field is no longer used.</inlineHelpText>
    <label>Deprecated: Plugin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
                <default>true</default>
                <label>Apex</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>