core/unpackaged/main/default/objects/LoggerPlugin__mdt/fields/SObjectHandlerApexClass__c.field-meta.xml
<CustomField>
    <fullName>SObjectHandlerApexClass__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>SObject Handler Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>