core/unpackaged/main/default/objects/LoggerPlugin__mdt/fields/SObjectHandlerFlowName__c.field-meta.xml
<CustomField>
    <fullName>SObjectHandlerFlowName__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>SObject Handler Flow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>