core/unpackaged/main/default/objects/LoggerPlugin__mdt/validationRules/Plugins_are_not_supported.validationRule-meta.xml
<ValidationRule>
    <fullName>Plugins_are_not_supported</fullName>
    <active>false</active>
    <description>Deprecated: this validation rule is no longer used</description>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>IsEnabled__c</errorDisplayField>
    <errorMessage>Plugins are not supported for this SObject Handler</errorMessage>
</ValidationRule>