core/unpackaged/main/default/objects/LoggerPlugin__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsEnabled__c</columns>
    <columns>SObjectHandlerExecutionOrder__c</columns>
    <columns>BatchPurgerExecutionOrder__c</columns>
    <columns>VersionNumber__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>